--- a/style.css
+++ b/style.css
@@ -55,7 +55,8 @@ a {
 .container {
     width:90vw;
     max-width: 850px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 .meetups {
     display: flex;
